--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -9,4 +9,18 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  
+  
+  
+<servlet>
+	<servlet-name>my_controller</servlet-name>
+	<servlet-class>controller.my_controller</servlet-class>
+</servlet>  
+
+<servlet-mapping>
+	<servlet-name>my_controller</servlet-name>
+	<url-pattern>/my_controller</url-pattern>
+</servlet-mapping>
+  
+  
 </web-app>
